# photo-filter

./: .gitignore  Dockerfile  config.example.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
k8s/: photo-filter.yaml
src/photo_filter/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  db.py  logging_config.py  models.py  mover.py  prompt.py  report.py  scanner.py  web.py
src/photo_filter/static/: index.html
