[project]
name = "photo-filter"
version = "0.1.0"
description = "LLM-powered photo filter that identifies and removes bad photos"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "openai>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "tenacity>=8.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.8",
]

[project.scripts]
photo-filter = "photo_filter.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
photo_filter = ["static/**"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
